Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriTextRetNumObj.quorum
class Main
    action Main
        text one = "green"
        text two = "green"
        Yoda<text, text, Number> yoda
        Number ret = yoda:useForce(one, two)
        output "passed"
     end
end
