Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriTextRetBoolObjFail.quorum
class Main
    action Main
        text one = "green"
        text two = "green"
        Yoda<text, text, Boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
